--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script>
+    <script type="module">
       // This is the "Offline page" service worker
       // Add this below content to your HTML page inside a <script type="module"></script> tag, or add the js file to your page at the very top to register service worker
       import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
