--- a/index.html
+++ b/index.html
@@ -6,53 +6,82 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            color: #333;
+            background-color: #fff;
+        }
+
+        #mycanvas {
+            float: center;
+            width: 600px;
+            height: 600px;
+            margin: 0 20px 0 0;
+            background-image: url(rain.jpg);
+            border: 1px solid #000;
+        }
+
+        #mycanvas.active {
+            background-image: none;
+        }
+    </style>
     <script>
         // This is the "Offline page" service worker
         // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
         // Check compatibility for the browser we're running this in
         if ("serviceWorker" in navigator) {
             if (navigator.serviceWorker.controller) {
-                    console.log("[PWA Builder] active service worker found, no need to register");
+                console.log("[PWA Builder] active service worker found, no need to register");
             } else {
-            // Register the service worker
-            navigator.serviceWorker
-                .register("pwabuilder-sw.js", {
-                    scope: "./"
-                })
-                .then(function (reg) {
-                    console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
-                });
+                // Register the service worker
+                navigator.serviceWorker
+                    .register("pwabuilder-sw.js", {
+                        scope: "./"
+                    })
+                    .then(function (reg) {
+                        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+                    });
             }
         }
     </script>
 </head>
 
 <body bgcolor="silver">
-    <div id="BingSearch" align="center">
-        <form method="get" action="https://www.bing.com/search">
-            <input type="hidden" name="cp" />
-            <input type="hidden" name="FORM" value="FREEWS" />
-            <table bgcolor="silver">
-                <tr>
-                    <td>
-                        <a href="https://www.bing.com/">
-                            <img src="https://www.bing.com/siteowner/s/siteowner/Logo_51x19_Dark.png" border="0"
-                                ALT="bing" />
-                        </a>
-                    </td>
-                    <td>
-                        <input type="text" name="q" style="width:50%" />
-                        <input type="submit" value="Search Web" />
-                    </td>
-                </tr>
-            </table>
-        </form>
+    <div align="center">
+        <h1>PWA test page</h1>
+        <canvas id="mycanvas" width="600px" height="600px"></canvas>
     </div>
-    <div id="Test PWA" align="center">
-        <iframe allowtransparency="true" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0"
-            scrolling="yes" src="https://bing.com/covid" width="100%" height="800px">
-        </iframe>
-    </div>
+    <script>
+        var canvas = document.getElementById("mycanvas");
+        if (canvas.getContext) {
+            // canvas supported  
+            canvas.className = "active";
+            // start animation  
+            var cxt = canvas.getContext("2d");
+            cxt.fillStyle = "rgba(255,255,255,0.5)";
+            setInterval(function () {
+                var x = Math.round(Math.random() * canvas.width),
+                    y = Math.round(Math.random() * canvas.height),
+                    e = 20 + Math.round(Math.random() * 30),
+                    s = 0;
+
+                (function () {
+                    s++;
+                    if (s <= e) {
+                        setTimeout(arguments.callee, s);
+                        var c = 255 - (e - s) * 3;
+                        cxt.strokeStyle = "rgb(" + c + "," + c + "," + c + ")";
+                        cxt.beginPath();
+                        cxt.arc(x, y, s, 0, Math.PI * 2, true);
+                        cxt.fill();
+                        cxt.stroke();
+                    }
+                })();
+            }, 100);
+        }
+    </script>
 </body>
 
 </html>
