--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
 <body onload="init();">
     <canvas id="theMatrix" width="1280" height="800">
-        <p>Your browser doesn't support canvas...L0Z3R</p>
+        <p>Your browser doesn't support canvas.</p>
+        <p>Source: https://github.com/syropian/HTML5-Matrix-Code-Rain</p>
     </canvas>
 </body>
 
