--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
 <body onload="init();">
     <p id="params"></p>
+    <div>
+        <a href="webcam.html">WebCam test page</a>
+        <a href="test.html">Test page</a>
+        <a href="offline.html">Offline page</a>
+    </div>
     <canvas id="theMatrix" width="1280" height="800">
         <p>Your browser doesn't support canvas.</p>
         <p>Source: https://github.com/syropian/HTML5-Matrix-Code-Rain</p>
