--- a/test.html
+++ b/test.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <a href="https://www.youtube.com/test test test">Link with spaces</a>
+        <a href="https://www.amazon.com">Link to Amazon</a>
+        <a href="https://www.facebook.com">Link to Facebook</a>
     </body>
 </html>
