--- a/sample.html
+++ b/sample.html
@@ -2,8 +2,31 @@
     <head>
         <title>Sample page</title>
         <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <style>
+          img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+          }
+          .first {border-bottom:1px solid #EEE;}
+          .second {border-top:1px solid #CCC;}
+        </style>
     </head>
 <body>
-    <img src="preview.png" alt="preview" width="400">
+  <table cellspacing="0" cellpadding="0">
+    <tr>
+      <td class="first">
+        <a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="NEW YORK" data-label_2="WEATHER" data-theme="original" >NEW YORK WEATHER</a>
+        <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+        </script>
+      </td>
+    </tr>
+    <tr>
+      <td class="second">
+        <img src="preview.png" alt="preview" style="width:100%;">
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
