--- a/sample.html
+++ b/sample.html
@@ -15,7 +15,7 @@
           /* CSS for dark mode */
           @media (prefers-color-scheme: dark) {
               .container {
-                  background-color: #666666;
+                  background-color:darkgray;
                   color: white;
               }
           }
@@ -23,7 +23,7 @@
           /* CSS for light mode */
           @media (prefers-color-scheme: light) {
               .container {
-                  background-color: white;
+                  background-color:lightgray;
               }
           }
           .first {border-bottom:1px solid #EEE;}
