--- a/sample.html
+++ b/sample.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>Sample page</title>
-        <meta name="viewport" content="width=375, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
-          table {
+          img {
+            display: block;
             margin-left: auto;
             margin-right: auto;
           }
@@ -24,27 +25,12 @@
               .container {
                   background-color: lightgray;
               }
-          } */
-          .first {border-bottom:1px solid #EEE;}
-          .second {border-top:1px solid #CCC;}
+          }
         </style>
     </head>
 <body class="container">
-  <table cellspacing="0" cellpadding="0">
-    <tr>
-      <td class="first">
-        <img src="preview.png" alt="preview" style="width:100%;">
-        <!-- <a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="SEATTLE" data-label_2="WEATHER" data-theme="original" >SEATTLE WEATHER</a>
-        <script>
-          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-        </script> -->
-      </td>
-    </tr>
-    <!-- <tr>
-      <td class="second">
-        <img src="preview.png" alt="preview" style="width:100%;">
-      </td>
-    </tr> -->
-  </table>
+  <div>
+    <img src="preview.png" alt="preview" style="width:25%;">
+  </div>
 </body>
 </html>
