--- a/sample.html
+++ b/sample.html
@@ -23,7 +23,7 @@
           /* CSS for light mode */
           @media (prefers-color-scheme: light) {
               .container {
-                  background-color: lightgray;
+                  background-color: #F6F6F6;
               }
           }
         </style>
