--- a/sample.html
+++ b/sample.html
@@ -3,9 +3,16 @@
         <title>Sample page</title>
         <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
-          .container {
+          img {
+            display: block;
             margin-left: auto;
             margin-right: auto;
+          }
+          .container {
+            margin-left: 0;
+            margin-right: 0;
+            margin-top: 0;
+            margin-right: 0;
           }
           /* CSS for dark mode */
           @media (prefers-color-scheme: dark) {
@@ -24,7 +31,7 @@
     </head>
 <body class="container">
   <div>
-    <img src="preview.png" alt="preview" style="width:100%;">
+    <img src="preview.png" alt="preview" style="width:99%;">
   </div>
 </body>
 </html>
