--- a/sample.html
+++ b/sample.html
@@ -30,8 +30,6 @@
         </style>
     </head>
 <body class="container">
-  <div>
-    <img src="preview.png" alt="preview" style="width:95%;">
-  </div>
+  <img src="preview.png" alt="preview" style="width:366px;object-fit:cover;">
 </body>
 </html>
