--- a/sample.html
+++ b/sample.html
@@ -8,6 +8,7 @@
             margin-right: 0;
             margin-top: 0;
             margin-right: 0;
+            background-color:transparent !important;
           }
           /* CSS for dark mode */
           @media (prefers-color-scheme: dark) {
