--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,7 @@
           .container {
             margin-left: 0;
             margin-right: 0;
-            margin-top: 0;
+            margin-top: 24px;
             margin-right: 0;
           }
           /* CSS for dark mode */
