--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body onload="init();">
     <p id="params"></p>
     <div>
-        <a href="webcam.html">WebCam test page</a>
+        <a href="preview.html">Image test page</a>
         <a href="test.html">Test page</a>
         <a href="offline.html">Offline page</a>
     </div>
