--- a/sample.html
+++ b/sample.html
@@ -24,7 +24,7 @@
           }
         </style>
     </head>
-<body class="container">
-  <img src="preview.png" alt="preview" style="width:380px;object-fit:cover;">
+<body>
+  <img src="preview.png" alt="preview" style="width:366px;">
 </body>
 </html>
