--- a/sample.html
+++ b/sample.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Sample page</title>
-        <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <!-- <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
         <style>
           .container {
             margin-left: 0;
@@ -25,6 +25,6 @@
         </style>
     </head>
 <body>
-  <img src="preview.png" alt="preview" style="width:366px;">
+  <img src="preview.png" alt="preview" style="width:100%;">
 </body>
 </html>
