--- a/sample.html
+++ b/sample.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Sample page</title>
-        <!-- <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
           .container {
             margin-left: 0;
