--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,7 @@
           .container {
             margin-left: 0;
             margin-right: 0;
-            margin-top: 24px;
+            margin-top: 0;
             margin-right: 0;
           }
           /* CSS for dark mode */
@@ -24,7 +24,7 @@
           }
         </style>
     </head>
-<body>
+<body class="container">
   <img src="preview.png" alt="preview" style="width:100%;">
 </body>
 </html>
