--- a/sample.html
+++ b/sample.html
@@ -9,6 +9,7 @@
             margin-top: 0;
             margin-right: 0;
           }
+          html { margin:0; padding:0; }
           /* CSS for dark mode */
           @media (prefers-color-scheme: dark) {
               .container {
