Handle onappinstalled event

--- a/sample.html
+++ b/sample.html
@@ -24,6 +24,11 @@
               }
           }
         </style>
+        <script>
+          window.onappinstalled = function() {
+            console.log('Thank you for installing our app!');
+          };
+        </script>
     </head>
 <body class="container">
   <img src="preview.png" alt="preview" style="width:100%;">
