--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div>
         <a href="sample.html">Image test page</a>
         <a href="test.html">Test page</a>
-        <a href="offline.html">Offline page</a>
+        <a href="offline.html" target="_blank">Offline page</a>
     </div>
     <canvas id="theMatrix" width="1280" height="800">
         <p>Your browser doesn't support canvas.</p>
