--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Home Page</title>
     <link rel="manifest" href="manifest.json">
-    <!-- <link rel="icon" href="icon.png"> -->
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="text/javascript" src="matrixtext.js"></script>
     <style>
