--- a/nomanifest/index.html
+++ b/nomanifest/index.html
@@ -23,6 +23,14 @@
                     });
             }
         }
+
+        window.addEventListener("beforeinstallprompt", (e) => {
+            // log the platforms provided as options in an install prompt
+            console.log(e.platforms); // e.g., ["web", "android", "windows"]
+            e.userChoice.then((choiceResult) => {
+                console.log(choiceResult.outcome); // either "accepted" or "dismissed"
+            }, handleError);
+        });
     </script>
 </head>
 
