--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="sample.html">Image test page</a>
         <a href="test.html">Test page</a>
         <a href="offline.html" target="_blank">Offline page</a>
-        <button id="install_button" onclick="InstallWebApp()">Install</button>
+        <button id="install_button">Install</button>
     </div>
     <canvas id="theMatrix" width="1280" height="800">
         <p>Your browser doesn't support canvas.</p>
