Added app title meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="app-title" content="Sample App Title">
     <script type="text/javascript" src="matrixtext.js"></script>
     <style>
         @font-face {
