--- a/test.html
+++ b/test.html
@@ -1,7 +1,34 @@
+<!DOCTYPE HTML>
 <html>
-    <body>
-        <a href="https://www.youtube.com/test test test">Link with spaces</a>
-        <a href="https://www.amazon.com">Link to Amazon</a>
-        <a href="https://www.facebook.com">Link to Facebook</a>
-    </body>
+
+<head>
+    <title>Home Page</title>
+    <link rel="manifest" href="manifest2.json">
+    <link rel="icon" href="icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script>
+        // This is the "Offline page" service worker
+        // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+        // Check compatibility for the browser we're running this in
+        if ("serviceWorker" in navigator) {
+            if (navigator.serviceWorker.controller) {
+                console.log("[PWA Builder] active service worker found, no need to register");
+            } else {
+                // Register the service worker
+                navigator.serviceWorker
+                    .register("pwabuilder-sw.js", {
+                        scope: "./"
+                    })
+                    .then(function (reg) {
+                        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+                    });
+            }
+        }
+    </script>
+</head>
+
+<body>
+    <p>PWA test page</p>
+</body>
+
 </html>
