--- a/ai/index.htm
+++ b/ai/index.htm
@@ -102,7 +102,7 @@
             error("Cannot create session now - " + e);
         }
 
-        session = await window.ai.assistant.create();
+        session = await window.ai.assistant.create({temperature: 1.0, topK: 1, maxTokens: 4096});
         var update_element = null;
         var current_cps = 0;
         var initial_delay = null;
