--- a/ai/index.htm
+++ b/ai/index.htm
@@ -55,7 +55,7 @@
         }
         async function checkDownload()
         {
-            let result = await window.ai.assistant.capabilities();
+            let result = await window.ai.languageModel.capabilities();
             if (result.available == 'after-download')
             {
                 window.setTimeout(checkDownload, 100);
@@ -68,7 +68,7 @@
 
         try
         {
-            let result = await window.ai.assistant.capabilities();
+            let result = await window.ai.languageModel.capabilities();
             if (result.available == 'no')
             {
               error(kFeatureFlagError);
@@ -94,7 +94,7 @@
         try
         {
             showBusy(true);
-            session = await window.ai.assistant.create({temperature: 1.0, topK: 1});
+            session = await window.ai.languageModel.create({temperature: 1.0, topK: 1});
             showBusy(false);
         }
         catch (e)
@@ -102,7 +102,7 @@
             error("Cannot create session now - " + e);
         }
 
-        session = await window.ai.assistant.create({temperature: 1.0, topK: 1, maxTokens: 4096});
+        session = await window.ai.languageModel.create({temperature: 1.0, topK: 1, maxTokens: 4096});
         var update_element = null;
         var current_cps = 0;
         var initial_delay = null;
