--- a/ai/index.htm
+++ b/ai/index.htm
@@ -40,6 +40,7 @@
     <script type="module" >
         let success = true;
         const kFeatureFlagError = "Prompt API is not available. Make sure you have enabled feature flags and are using Canary.";
+        const kNoModelError = "Prompt API is available, feature flag is likley set correctly but no models are available. Likley feature has crashed more than 5 times.";
         function error(str)
         {
           // Show the first error.
@@ -71,10 +72,12 @@
             let result = await window.ai.languageModel.capabilities();
             if (result.available == 'no')
             {
-              error(kFeatureFlagError);
+              error(kNoModelError);
             }
             if (result.available == 'after-download')
             {
+                // call the API to trigger download.
+                window.ai.languageModel.create({temperature: 1.0, topK: 1});
                 checkDownload();
             }
             if (result.available != 'readily')
@@ -102,11 +105,16 @@
             error("Cannot create session now - " + e);
         }
 
-        session = await window.ai.languageModel.create({temperature: 1.0, topK: 1, maxTokens: 4096});
+        session = await window.ai.languageModel.create();
         var update_element = null;
         var current_cps = 0;
         var initial_delay = null;
         var start_time = null;
+
+        var post_prefill_time = null;
+        var post_prefill_c = null;
+        var post_prefill_t = null;
+
         var cps_element = document.getElementById("cps");
         var tps_element = document.getElementById("tps");
         var latency_element = document.getElementById("latency");
@@ -130,9 +138,22 @@
                   showBusy(false);
                   update_element.innerText = chunk;
                   token_count++;
-                  const seconds = Math.floor((Date.now() - start_time) / 1000);
-                  current_cps = Math.round((update_element.innerText.length / seconds));
-                  current_tps = Math.round((token_count / seconds));
+                  // Wait for prefill to complete before we estimate tokens per second.
+                  if (token_count >= 2)
+                  {
+                    if (post_prefill_time)
+                    {
+                        const seconds = Math.floor((Date.now() - post_prefill_time) / 1000);
+                        current_cps = Math.round((update_element.innerText.length - post_prefill_c) / seconds);
+                        current_tps = Math.round((token_count - post_prefill_t) / seconds);
+                    }
+                    else
+                    {
+                        post_prefill_time = Date.now();
+                        post_prefill_c = update_element.innerText.length;
+                        post_prefill_t = token_count;
+                    }
+                  }
                   if (initial_delay == null)
                   {
                       initial_delay = (Date.now() - start_time);
@@ -162,6 +183,9 @@
             reply.innerText = "...";
             start_time = Date.now();
             token_count = 0;
+            post_prefill_time = null;
+            post_prefill_c = null;
+            post_prefill_t = null;
             main(prompt);
         }
         document.getElementById("send").onclick = onSend;
