--- a/ai/index.htm
+++ b/ai/index.htm
@@ -91,7 +91,7 @@
         try
         {
             showBusy(true);
-            var initialPrompt = document.getElementById("prompt").value;
+            var initialPrompt = document.getElementById("initialPrompt").value;
             const sessionConfig = {
             temperature: 1.0,
             topK: 1,
