--- a/ai/index.htm
+++ b/ai/index.htm
@@ -12,18 +12,16 @@
             <!-- Add an input box text prompt to allow setting of initial prompt  -->
             <p id="prompt">
                 <label for="prompt">Initial Prompt:</label>
-                <input type="text" id="initialPrompt" name="prompt" value="Respond to every request in Shakespearian prose" style="width: 75%;">
+                <input type="text" id="initialPrompt" name="prompt" placeholder="Respond to every request in Shakespearian prose" style="width: 75%;">
             </p>
             <p id="error">
             </p>
             <p id="okay">
                 SUCCESS: Prompt API supported. <span><b>Char/s <b id="cps">0</b></b>|<b>Tokens/s <b id="tps">0</b></b>|<b>Start Latency (ms)<b id="latency">0</b></b></span>
             </p>
-            <div class="wrapper" id="busy">
-                <div class="progressbar">
-                  <div class="stylization">
-                  </div>
-                </div>
+            <div class="progress-bar">
+                <label for="modelDownloadProgress">Model Download Progress:</label>
+                <progress id="modelDownloadProgress" value="0" max="100"></progress>
             </div>
             <div class="imessage">
             </div>
@@ -33,8 +31,39 @@
     </body>
     <script type="module" >
         let success = true;
+        var session = null;
         const kFeatureFlagError = "Prompt API is not available.";
         const kNoModelError = "Prompt API is available. Likley feature has crashed more than 5 times.";
+
+        async function createNewSession() {
+            try{
+                var initialPrompt = document.getElementById("initialPrompt").value;
+                const sessionConfig = {
+                temperature: 1.0,
+                topK: 1,
+                monitor(m) {
+                    m.addEventListener("downloadprogress", e => {
+                    // update the progress bar with latest download status
+                    document.getElementById("modelDownloadProgress").value = (e.loaded / e.total) * 100;
+                    if (e.loaded == e.total) {
+                        document.getElementById("modelDownloadProgress").value = 100;
+                        console.log("Download complete");
+                    }
+                    });
+                }
+                };
+                if (initialPrompt !== "") {
+                sessionConfig.initialPrompts = [{ role: "system", content: initialPrompt }];
+                }
+                session = await window.ai.languageModel.create(sessionConfig);
+                document.getElementById("modelDownloadProgress").value = 100;
+            }
+            catch (e)
+            {
+                error("Cannot create session now - " + e);
+            }
+        }
+
         function error(str)
         {
           // Show the first error.
@@ -44,10 +73,7 @@
           }
           throw new Error(str);
         }
-        function showBusy(busy)
-        {
-            document.getElementById("busy").style.display = busy ? "block" : "none";
-        }
+
         async function checkDownload()
         {
             let result = await window.ai.languageModel.capabilities();
@@ -60,6 +86,15 @@
                 window.location.reload();
             }
         }
+
+        document.getElementById("initialPrompt").addEventListener("change", async function() {
+            try {
+                session.destroy();
+                await createNewSession();
+            } catch (e) {
+                error("Cannot create session now - " + e);
+            }
+        });
 
         try
         {
@@ -87,34 +122,7 @@
             }
         }
 
-        var session = null;
-        try
-        {
-            showBusy(true);
-            var initialPrompt = document.getElementById("initialPrompt").value;
-            const sessionConfig = {
-            temperature: 1.0,
-            topK: 1,
-            monitor(m) {
-                m.addEventListener("downloadprogress", e => {
-                console.log(`Downloaded ${e.loaded} of ${e.total} bytes.`);
-                if (e.loaded == e.total) {
-                    showBusy(false);
-                }
-                });
-            }
-            };
-            if (initialPrompt !== "") {
-            sessionConfig.initialPrompts = [{ role: "system", content: initialPrompt }];
-            }
-            session = await window.ai.languageModel.create(sessionConfig);
-            showBusy(false);
-        }
-        catch (e)
-        {
-            error("Cannot create session now - " + e);
-        }
-
+        await createNewSession();
         var update_element = null;
         var current_cps = 0;
         var initial_delay = null;
@@ -135,7 +143,6 @@
             let stream = null;
             try
             {
-                showBusy(true);
                 stream = session.promptStreaming(input);
             }
             catch (e)
@@ -144,7 +151,6 @@
             }
             try {
               for await (const chunk of stream) {
-                  showBusy(false);
                   update_element.innerText = chunk;
                   token_count++;
                   // Wait for prefill to complete before we estimate tokens per second.
@@ -206,6 +212,5 @@
                 onSend();
             }
         });
-        showBusy(false);
     </script>
 </html>
