--- a/ai/index.htm
+++ b/ai/index.htm
@@ -196,7 +196,7 @@
             reply.setAttribute("class", "from-them");
             document.getElementsByClassName("imessage")[0].appendChild(reply);
             update_element = reply;
-            reply.innerText = "...";
+            reply.innerText = "";
             start_time = Date.now();
             token_count = 0;
             post_prefill_time = null;
