Use availability API if capability is not available

--- a/ai/index.htm
+++ b/ai/index.htm
@@ -88,7 +88,11 @@
 
         async function checkDownload()
         {
-            let result = await window.ai.languageModel.capabilities();
+            if (window.ai.languageModel.capabilities) {
+                let result = await window.ai.languageModel.capabilities();
+            } else {
+                let result = await window.ai.languageModel.availability();
+            }
             if (result.available == 'after-download')
             {
                 window.setTimeout(checkDownload, 1000);
@@ -110,7 +114,11 @@
 
         try
         {
-            let result = await window.ai.languageModel.capabilities();
+            if (window.ai.languageModel.capabilities) {
+                let result = await window.ai.languageModel.capabilities();
+            } else {
+                let result = await window.ai.languageModel.availability();
+            }
             if (result.available == 'no')
             {
               error(kNoModelError);
