--- a/ai/index.htm
+++ b/ai/index.htm
@@ -25,225 +25,10 @@
             </div>
             <div class="imessage">
             </div>
-            <textarea id="input" name="input">Do you think it is a good idea to embed an on-device language model in a web browser ?</textarea>
+            <textarea id="input" name="input">Do you think it is a good idea to embed an on-device language model in a web browser?</textarea>
             <button id="send"></button>
             <button id="stop"></button>
         </div>
     </body>
-    <script type="module" >
-        let success = true;
-        var session = null;
-        const kFeatureFlagError = "Prompt API is not available.";
-        const kNoModelError = "Prompt API is available. Likley feature has crashed more than 5 times.";
-        let abortController;
-
-        function showButton(id, show) {
-            document.getElementById(id).style.display = show ? "block" : "none";
-        }
-
-        function showButtons(streaming) {
-            showButton("send", !streaming);
-            showButton("stop", streaming);
-        }
-
-        async function createNewSession() {
-            try{
-                var initialPrompt = document.getElementById("initialPrompt").value;
-                const sessionConfig = {
-                temperature: 1.0,
-                topK: 1,
-                maxTokens: 4096,
-                monitor(m) {
-                    m.addEventListener("downloadprogress", e => {
-                    // update the progress bar with latest download status
-                    document.getElementById("modelDownloadProgress").value = (e.loaded / e.total) * 100;
-                    if (e.loaded == e.total) {
-                        document.getElementById("modelDownloadProgress").value = 100;
-                        console.log("Download complete");
-                    }
-                    });
-                }
-                };
-                if (initialPrompt !== "") {
-                sessionConfig.initialPrompts = [{ role: "system", content: initialPrompt }];
-                }
-                session = await window.ai.languageModel.create(sessionConfig);
-                document.getElementById("modelDownloadProgress").value = 100;
-            }
-            catch (e)
-            {
-                error("Cannot create session now - " + e);
-            }
-        }
-
-        function error(str)
-        {
-          // Show the first error.
-          if (success) {
-            document.getElementById("error").innerText = str;
-            success = false;
-          }
-          throw new Error(str);
-        }
-
-        async function checkDownload()
-        {
-            if (window.ai.languageModel.capabilities) {
-                let result = await window.ai.languageModel.capabilities();
-            } else {
-                let result = await window.ai.languageModel.availability();
-            }
-            if (result.available == 'after-download')
-            {
-                window.setTimeout(checkDownload, 1000);
-            }
-            if (result.available == 'readily')
-            {
-                window.location.reload();
-            }
-        }
-
-        document.getElementById("initialPrompt").addEventListener("change", async function() {
-            try {
-                session.destroy();
-                await createNewSession();
-            } catch (e) {
-                error("Cannot create session now - " + e);
-            }
-        });
-
-        try
-        {
-            if (window.ai.languageModel.capabilities) {
-                let result = await window.ai.languageModel.capabilities();
-            } else {
-                let result = await window.ai.languageModel.availability();
-            }
-            if (result.available == 'no')
-            {
-              error(kNoModelError);
-            }
-            if (result.available == 'after-download')
-            {
-                // call the API to trigger download.
-                window.ai.languageModel.create({temperature: 1.0, topK: 1});
-                checkDownload();
-            }
-            if (result.available != 'readily')
-            {
-                error("Cannot create model now - " + result.available);
-            }
-        }
-        catch (e)
-        {
-            if (e.name === "TypeError")
-            {
-                error(kFeatureFlagError);
-            }
-        }
-
-        await createNewSession();
-        var update_element = null;
-        var current_cps = 0;
-        var initial_delay = null;
-        var start_time = null;
-
-        var post_prefill_time = null;
-        var post_prefill_c = null;
-        var post_prefill_t = null;
-
-        var cps_element = document.getElementById("cps");
-        var tps_element = document.getElementById("tps");
-        var latency_element = document.getElementById("latency");
-        var token_count = 0;
-        var current_tps = 0;
-        const sendButton = document.getElementById("send");
-        const stopButton = document.getElementById("stop");
-        async function main(input)
-        {
-            update_element.scrollIntoView(false);
-            let stream = null;
-            
-            try
-            {
-                abortController = new AbortController();
-                stopButton.onclick = () => {
-                    abortController.abort();
-                    showButtons(false);
-                    console.log("Stream cancelled");
-                };
-                stream = session.promptStreaming(input, { signal: abortController.signal });
-            }
-            catch (e)
-            {
-                error("Cannot create stream now - " + e);
-            }
-            try {
-              console.log("Starting stream");
-              showButtons(true);
-              for await (const chunk of stream) {
-                  update_element.innerText += chunk;
-                  token_count++;
-                  // Wait for prefill to complete before we estimate tokens per second.
-                  if (token_count >= 2)
-                  {
-                    if (post_prefill_time)
-                    {
-                        const seconds = Math.floor((Date.now() - post_prefill_time) / 1000);
-                        current_cps = Math.round((update_element.innerText.length - post_prefill_c) / seconds);
-                        current_tps = Math.round((token_count - post_prefill_t) / seconds);
-                    }
-                    else
-                    {
-                        post_prefill_time = Date.now();
-                        post_prefill_c = update_element.innerText.length;
-                        post_prefill_t = token_count;
-                    }
-                  }
-                  if (initial_delay == null)
-                  {
-                      initial_delay = (Date.now() - start_time);
-                      latency_element.innerText = initial_delay;
-                  }
-                  cps_element.innerText = current_cps;
-                  tps_element.innerText = current_tps;
-                  console.log(`${session.tokensSoFar}/${session.maxTokens} (${session.tokensLeft} left)`);
-              }
-              console.log("Stream ended");
-              showButtons(false);
-            }
-            catch (e)
-            {
-                error("Stream error - " + e);
-            }
-        }
-
-        async function onSend() {
-            const inputText = document.getElementById("input").value;
-            const prompt = inputText;
-            let input = document.createElement("p");
-            input.setAttribute("class", "from-me");
-            input.innerText = inputText;
-            document.getElementsByClassName("imessage")[0].appendChild(input);
-            let reply = document.createElement("p");
-            reply.setAttribute("class", "from-them");
-            document.getElementsByClassName("imessage")[0].appendChild(reply);
-            update_element = reply;
-            reply.innerText = "";
-            start_time = Date.now();
-            token_count = 0;
-            post_prefill_time = null;
-            post_prefill_c = null;
-            post_prefill_t = null;
-            main(prompt);
-        }
-        document.getElementById("send").onclick = onSend;
-        document.getElementById("okay").style.display = "block";
-        document.getElementById("input").addEventListener("keypress", e => {
-            if (e.key === "Enter" && !e.shiftKey) {
-                e.preventDefault();
-                onSend();
-            }
-        });
-    </script>
+    <script type="module" src="prompt.js"></script>
 </html>
