--- a/ai/index.htm
+++ b/ai/index.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>  <meta charset="UTF-8">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="AI Chat Demo using Microsoft Edge's built-in Prompt API for local AI conversations">
   <meta name="theme-color" content="#6366f1">
@@ -21,7 +22,8 @@
         <div class="app-icon">🤖</div>
         <div class="header-text">
           <h1>Prompt API Demo</h1>
-          <p>Powered by Microsoft Edge's built-in language model</p>        </div> <!-- Performance Metrics -->
+          <p>Powered by Microsoft Edge's built-in language model</p>
+        </div> <!-- Performance Metrics -->
         <div class="header-metrics">
           <div class="metric-item">
             <span class="metric-value" id="cps">0</span>
@@ -104,7 +106,8 @@
               </p>
             </div>
           </div>
-          <div class="chat-input-container">            <div class="input-wrapper">
+          <div class="chat-input-container">
+            <div class="input-wrapper">
               <textarea id="input"
                 placeholder="Type your message here... (Press Enter to send, Shift+Enter for new line)">Tell me an interesting fact about the universe that most people don't know</textarea>
               <div class="input-actions">
@@ -121,7 +124,8 @@
                 </button>
               </div>
             </div>
-          </div>        </div>
+          </div>
+        </div>
     </main>
   </div>
   <!-- Load JavaScript with defer for better performance -->
