--- a/ai/translate/index.html
+++ b/ai/translate/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chrome Translation API Demo</title>
+  <title>Browser Translation API Demo</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="../../icon.png">
 </head>
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>Chrome Translation API Demo</h1>
-      <p class="subtitle">Testing Chrome's built-in on-device translation capabilities</p>
+      <h1>Browser Translation API Demo</h1>
+      <p class="subtitle">Testing browser's built-in on-device translation capabilities</p>
       <div class="api-status" id="apiStatus">
         <span class="status-indicator" id="statusIndicator"></span>
         <span id="statusText">Checking API availability...</span>
@@ -147,7 +147,7 @@
     </main>
 
     <footer>
-      <p>Built with Chrome's Translation API | <a href="https://developer.chrome.com/docs/ai/translator-api"
+      <p>Built with browser's Translation API | <a href="https://developer.chrome.com/docs/ai/translator-api"
           target="_blank">API Documentation</a></p>
     </footer>
   </div>
